--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,24 @@
+*.log
+.DS_Store
 .env
-.env.*
-vendor/
-node_modules/
-public/storage
-storage/*.key
-storage/logs/
-storage/framework/cache/
-storage/framework/sessions/
-storage/framework/testing/
-storage/framework/views/
-.idea/
-.vscode/
+.env.backup
+.env.production
+.phpactor.json
 .phpunit.result.cache
+/.fleet
+/.idea
+/.nova
+/.phpunit.cache
+/.vscode
+/.zed
+/auth.json
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/storage/pail
+/vendor
+Homestead.json
+Homestead.yaml
+Thumbs.db
